--- a/src/components/posts/PostCard.module.css
+++ b/src/components/posts/PostCard.module.css
@@ -3,6 +3,7 @@
   padding: 1rem;
   background-color: white;
   border-radius: 8px;
+  height: 35%;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   animation: animate-in 1s ease-out forwards;
 }
@@ -19,6 +20,7 @@
   white-space: pre-wrap;
   font-size: 1.25rem;
   margin: 0.25rem 0 0 0;
+  overflow-wrap: break-word;
   color: black;
 }
 
